--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -1,3 +1,15 @@
+@misc{allaireQuarto2022,
+  title = {Quarto},
+  author = {Allaire, J.J. and Teague, Charles and Xie, Yihui and Dervieux, Christophe},
+  year = {2022},
+  month = jan,
+  doi = {10.5281/ZENODO.5960048},
+  urldate = {2024-02-20},
+  abstract = {Quarto is an open-source scientific and technical publishing system built on Pandoc.},
+  copyright = {GNU General Public License v2.0 or later, Open Access},
+  howpublished = {Zenodo}
+}
+
 @misc{atteveldtCorpustoolsManagingQuerying2023,
   title = {Corpustools: {{Managing}}, {{Querying}} and {{Analyzing Tokenized Text}}},
   shorttitle = {Corpustools},
@@ -9,9 +21,70 @@
   copyright = {GPL-3}
 }
 
+@article{Backman2021,
+  title = {Exome Sequencing and Analysis of 454,787 {{UK Biobank}} Participants.},
+  author = {Backman, Joshua D. and Li, Alexander H. and Marcketta, Anthony and Sun, Dylan and Mbatchou, Joelle and Kessler, Michael D. and Benner, Christian and Liu, Daren and Locke, Adam E. and Balasubramanian, Suganthi and Yadav, Ashish and Banerjee, Nilanjana and Gillies, Christopher E. and Damask, Amy and Liu, Simon and Bai, Xiaodong and Hawes, Alicia and Maxwell, Evan and Gurski, Lauren and Watanabe, Kyoko and Kosmicki, Jack A. and Rajagopal, Veera and Mighty, Jason and Jones, Marcus and Mitnaul, Lyndon and Stahl, Eli and Coppola, Giovanni and Jorgenson, Eric and Habegger, Lukas and Salerno, William J. and Shuldiner, Alan R. and Lotta, Luca A. and Overton, John D. and Cantor, Michael N. and Reid, Jeffrey G. and Yancopoulos, George and Kang, Hyun M. and Marchini, Jonathan and Baras, Aris and Abecasis, Gon{\c c}alo R. and Ferreira, Manuel A. R.},
+  year = {2021},
+  month = nov,
+  journal = {Nature},
+  volume = {599},
+  number = {7886},
+  pages = {628--634},
+  address = {England},
+  issn = {1476-4687 0028-0836},
+  doi = {10.1038/s41586-021-04103-z},
+  abstract = {A major goal in human genetics is to use natural variation to understand the phenotypic consequences of altering each protein-coding gene in the genome. Here  we used exome sequencing(1) to explore protein-altering variants and their  consequences in 454,787 participants in the UK Biobank study(2). We identified  12\,million coding variants, including around 1\,million loss-of-function and  around 1.8\,million deleterious missense variants. When these were tested for  association with 3,994 health-related traits, we found 564 genes with trait  associations at P\,{$\leq$}\,2.18\,{\texttimes}\,10(-11). Rare variant associations were enriched in  loci from~genome-wide association studies (GWAS), but most (91\%) were independent  of common variant signals. We discovered several risk-increasing associations  with traits related to liver disease, eye disease and cancer, among others, as  well as risk-lowering associations for hypertension (SLC9A3R2), diabetes  (MAP3K15, FAM234A) and asthma (SLC27A3). Six genes were associated with brain  imaging phenotypes, including two involved in neural development (GBE1, PLD1). Of  the signals available and powered for replication~in an independent cohort, 81\%  were confirmed; furthermore, association signals were generally consistent across  individuals of European, Asian and African ancestry. We illustrate the ability of  exome sequencing to identify gene-trait associations, elucidate gene function and  pinpoint effector genes that underlie GWAS signals at scale.},
+  copyright = {{\copyright} 2021. The Author(s).},
+  langid = {english},
+  pmcid = {PMC8596853},
+  pmid = {34662886},
+  keywords = {*Biological Specimen Banks,*Databases Genetic,*Exome Sequencing,Africa/ethnology,Asia/ethnology,Asthma/genetics,Diabetes Mellitus/genetics,Europe/ethnology,Exome/*genetics,Eye Diseases/genetics,Female,Genetic Predisposition to Disease/genetics,Genetic Variation,Genome-Wide Association Study,Humans,Hypertension/genetics,Liver Diseases/genetics,Male,Mutation,Neoplasms/genetics,Quantitative Trait Heritable,United Kingdom}
+}
+
 @misc{CcbhmsPhontoPHenome,
   title = {Ccb-Hms/Phonto: {{PHenome}} - {{PHenome ONTOlogy}} for {{NHANES}}},
   urldate = {2024-02-19}
+}
+
+@article{Cobalt,
+  title = {Association of Blood Cobalt Concentrations with Dyslipidemia, Hypertension, and Diabetes in a {{US}} Population},
+  author = {Wang, Hongxin and Li, Feng and Xue, Jianghua and Li, Yanshuang and Li, Jiyu},
+  year = {2022},
+  month = jan,
+  journal = {Medicine},
+  volume = {101},
+  number = {2},
+  pages = {e28568},
+  issn = {0025-7974},
+  doi = {10.1097/MD.0000000000028568},
+  urldate = {2024-02-20},
+  abstract = {Various heavy metal elements in the human body have been reported to be associated with dyslipidemia, hypertension, and diabetes. The role of cobalt in these conditions is unclear. The current study aimed to investigate the association of blood cobalt concentrations with dyslipidemia, hypertension, and diabetes., Using the data collected from the National Health and Nutrition Examination Survey (2015-2018), we performed logistic regression to explore the association of blood cobalt concentrations with total cholesterol (TC), low-density lipoprotein cholesterol (LDL-C), high-density lipoprotein cholesterol (HDL-C), triglycerides, hypertension, and diabetes., A total of 6866 adults were included in this study. Participants with higher blood cobalt levels appeared to be older and have a lower body mass index and, were more likely to be female (P for trend{$\mkern1mu<\mkern1mu$}.05). After fully adjusting for demographic characteristics (Model 2), compared with the lowest quartile, the highest quartile of blood cobalt concentrations had lower odds ratios (ORs) for elevated TC [OR: 0.62, 95\% confidential interval (CI): 0.53 to 0.72, P{$\mkern1mu<\mkern1mu$}.001], elevated LDL-C (OR: 0.65, 95\% CI: 0.53-0.80, P{$\mkern1mu<\mkern1mu$}.001) and low HDL-C (OR: 0.81, 95\% CI: 0.69-0.96, P{$\mkern1mu$}={$\mkern1mu$}.013). The adjusted ORs for elevated TC, elevated LDL-C and low HDL-C were negatively correlated with increased blood cobalt concentrations (P for trend{$\mkern1mu<\mkern1mu$}.05). The adjusted ORs for hypertension and diabetes were not associated with blood cobalt concentrations (P{$\mkern1mu>\mkern1mu$}.05 and P for trend{$\mkern1mu>\mkern1mu$}.05)., In conclusion, higher blood cobalt concentrations were associated with a lower risk of dyslipidemia. However, blood cobalt concentrations were not associated with the risk of hypertension or diabetes.},
+  pmcid = {PMC8757996},
+  pmid = {35029227}
+}
+
+@article{Docker,
+  title = {Docker: Lightweight Linux Containers for Consistent Development and Deployment.},
+  author = {Merkel, D.},
+  year = {2014},
+  journal = {Linux Journal}
+}
+
+@article{edlinMoreAccurateEstimate2015,
+  title = {Toward a {{More Accurate Estimate}} of the {{Prevalence}} of {{Hepatitis C}} in the {{United States}}},
+  author = {Edlin, Brian R. and Eckhardt, Benjamin J. and Shu, Marla A. and Holmberg, Scott D. and Swan, Tracy},
+  year = {2015},
+  month = nov,
+  journal = {Hepatology (Baltimore, Md.)},
+  volume = {62},
+  number = {5},
+  pages = {1353--1363},
+  issn = {0270-9139},
+  doi = {10.1002/hep.27978},
+  urldate = {2024-02-23},
+  abstract = {Data from the 2003-2010 National Health and Nutrition Examination Survey (NHANES) indicate that about 3.6 million people in the United States have antibodies to the hepatitis C virus, of whom 2.7 million are currently infected. NHANES, however, excludes several high-risk populations from its sampling frame, including people who are incarcerated, homeless, or hospitalized; nursing home residents; active-duty military personnel; and people living on Indian reservations. We undertook a systematic review of peer-reviewed literature and sought out unpublished presentations and data to estimate the prevalence of hepatitis C in these excluded populations and in turn improve the estimate of the number of people with hepatitis C in the United States. The available data do not support a precise result, but we estimated that 1.0 million (range 0.4 million-1.8 million) persons excluded from the NHANES sampling frame have hepatitis C virus antibody, including 500,000 incarcerated people, 220,000 homeless people, 120,000 people living on Indian reservations, and 75,000 people in hospitals. Most are men. An estimated 0.8 million (range 0.3 million-1.5 million) are currently infected. Several additional sources of underestimation, including nonresponse bias and the underrepresentation of other groups at increased risk of hepatitis C that are not excluded from the NHANES sampling frame, were not addressed in this study.},
+  pmcid = {PMC4751870},
+  pmid = {26171595}
 }
 
 @misc{endresCjendres1Nhanes2024,
@@ -22,6 +95,13 @@
   urldate = {2024-02-19},
   abstract = {nhanesA: R package for browsing and retrieving NHANES data},
   keywords = {cran-r,nhanes}
+}
+
+@book{geiger1995inside,
+  title = {Inside {{ODBC}}},
+  author = {Geiger, Kyle},
+  year = {1995},
+  publisher = {Microsoft Press}
 }
 
 @book{gentlemanGwasCatSearchPackageSupport2024,
@@ -37,6 +117,25 @@
   year = {2024}
 }
 
+@article{HPO2024,
+  title = {The {{Human Phenotype Ontology}} in 2024: Phenotypes around the World},
+  shorttitle = {The {{Human Phenotype Ontology}} in 2024},
+  author = {Gargano, Michael A. and Matentzoglu, Nicolas and Coleman, Ben and {Addo-Lartey}, Eunice B. and Anagnostopoulos, Anna V. and Anderton, Joel and Avillach, Paul and Bagley, Anita M. and Bak{\v s}tein, Eduard and Balhoff, James P. and Baynam, Gareth and Bello, Susan M. and Berk, Michael and Bertram, Holli and Bishop, Somer and Blau, Hannah and Bodenstein, David F. and Botas, Pablo and Boztug, Kaan and {\v C}ady, Jolana and Callahan, Tiffany J. and Cameron, Rhiannon and Carbon, Seth J. and Castellanos, Francisco and Caufield, J. Harry and Chan, Lauren E. and Chute, Christopher G. and {Cruz-Rojo}, Jaime and {Dahan-Oliel}, No{\'e}mi and Davids, Jon R. and {de Dieuleveult}, Maud and {de Souza}, Vinicius and {de Vries}, Bert B. A. and {de Vries}, Esther and DePaulo, J. Raymond and Derfalvi, Beata and Dhombres, Ferdinand and {Diaz-Byrd}, Claudia and Dingemans, Alexander J. M. and Donadille, Bruno and Duyzend, Michael and Elfeky, Reem and Essaid, Shahim and Fabrizzi, Carolina and Fico, Giovanna and Firth, Helen V. and {Freudenberg-Hua}, Yun and Fullerton, Janice M. and Gabriel, Davera L. and Gilmour, Kimberly and Giordano, Jessica and Goes, Fernando S. and Moses, Rachel Gore and Green, Ian and Griese, Matthias and Groza, Tudor and Gu, Weihong and Guthrie, Julia and Gyori, Benjamin and Hamosh, Ada and Hanauer, Marc and Hanu{\v s}ov{\'a}, Kate{\v r}ina and He, Yongqun Oliver and Hegde, Harshad and Helbig, Ingo and Holasov{\'a}, Kate{\v r}ina and Hoyt, Charles Tapley and Huang, Shangzhi and Hurwitz, Eric and Jacobsen, Julius O. B. and Jiang, Xiaofeng and Joseph, Lisa and Keramatian, Kamyar and King, Bryan and Knoflach, Katrin and Koolen, David A. and Kraus, Megan L. and Kroll, Carlo and Kusters, Maaike and Ladewig, Markus S. and Lagorce, David and Lai, Meng-Chuan and Lapunzina, Pablo and Laraway, Bryan and {Lewis-Smith}, David and Li, Xiarong and Lucano, Caterina and Majd, Marzieh and Marazita, Mary L. and {Martinez-Glez}, Victor and McHenry, Toby H. and McInnis, Melvin G. and McMurry, Julie A. and Mihulov{\'a}, Michaela and Millett, Caitlin E. and Mitchell, Philip B. and Moslerov{\'a}, Veronika and Narutomi, Kenji and Nematollahi, Shahrzad and Nevado, Julian and Nierenberg, Andrew A. and {\v C}ajbikov{\'a}, Nikola Nov{\'a}k and Nurnberger, John I. and Ogishima, Soichi and Olson, Daniel and Ortiz, Abigail and Pachajoa, Harry and {Perez de Nanclares}, Guiomar and Peters, Amy and Putman, Tim and Rapp, Christina K. and Rath, Ana and Reese, Justin and Rekerle, Lauren and Roberts, Angharad M. and Roy, Suzy and Sanders, Stephan J. and Schuetz, Catharina and Schulte, Eva C. and Schulze, Thomas G. and Schwarz, Martin and Scott, Katie and Seelow, Dominik and Seitz, Berthold and Shen, Yiping and Similuk, Morgan N. and Simon, Eric S. and Singh, Balwinder and Smedley, Damian and Smith, Cynthia L. and Smolinsky, Jake T. and Sperry, Sarah and Stafford, Elizabeth and Stefancsik, Ray and Steinhaus, Robin and Strawbridge, Rebecca and Sundaramurthi, Jagadish Chandrabose and Talapova, Polina and Tenorio Castano, Jair A. and Tesner, Pavel and Thomas, Rhys H. and Thurm, Audrey and Turnovec, Marek and {van Gijn}, Marielle E. and Vasilevsky, Nicole A. and Vl{\v c}kov{\'a}, Mark{\'e}ta and Walden, Anita and Wang, Kai and Wapner, Ron and Ware, James S. and Wiafe, Addo A. and Wiafe, Samuel A. and Wiggins, Lisa D. and Williams, Andrew E. and Wu, Chen and Wyrwoll, Margot J. and Xiong, Hui and Yalin, Nefize and Yamamoto, Yasunori and Yatham, Lakshmi N. and Yocum, Anastasia K. and Young, Allan H. and Y{\"u}ksel, Zafer and Zandi, Peter P. and Zankl, Andreas and Zarante, Ignacio and Zvolsk{\'y}, Miroslav and Toro, Sabrina and Carmody, Leigh C. and Harris, Nomi L. and {Munoz-Torres}, Monica C. and Danis, Daniel and Mungall, Christopher J. and K{\"o}hler, Sebastian and Haendel, Melissa A. and Robinson, Peter N.},
+  year = {2024},
+  month = jan,
+  journal = {Nucleic Acids Research},
+  volume = {52},
+  number = {D1},
+  pages = {D1333-D1346},
+  issn = {1362-4962},
+  doi = {10.1093/nar/gkad1005},
+  abstract = {The Human Phenotype Ontology (HPO) is a widely used resource that comprehensively organizes and defines the phenotypic features of human disease, enabling computational inference and supporting genomic and phenotypic analyses through semantic similarity and machine learning algorithms. The HPO has widespread applications in clinical diagnostics and translational research, including genomic diagnostics, gene-disease discovery, and cohort analytics. In recent years, groups around the world have developed translations of the HPO from English to other languages, and the HPO browser has been internationalized, allowing users to view HPO term labels and in many cases synonyms and definitions in ten languages in addition to English. Since our last report, a total of 2239 new HPO terms and 49235 new HPO annotations were developed, many in collaboration with external groups in the fields of psychiatry, arthrogryposis, immunology~and cardiology. The Medical Action Ontology (MAxO) is a new effort to model treatments and other measures taken for clinical management. Finally, the HPO consortium is contributing to efforts to integrate the HPO and the GA4GH Phenopacket Schema into electronic health records (EHRs) with the goal of more standardized and computable integration of rare disease data in EHRs.},
+  langid = {english},
+  pmcid = {PMC10767975},
+  pmid = {37953324},
+  keywords = {Algorithms,Biological Ontologies,Genomics,Humans,Phenotype,Rare Diseases}
+}
+
 @article{huberOrchestratingHighthroughputGenomic2015,
   title = {Orchestrating High-Throughput Genomic Analysis with {{Bioconductor}}},
   author = {Huber, W. and Carey, V. J. and Gentleman, R. and Anders, S. and Carlson, M. and Carvalho, B. S. and Bravo, H. C. and Davis, S. and Gatto, L. and Girke, T. and Gottardo, R. and Hahne, F. and Hansen, K. D. and Irizarry, R. A. and Lawrence, M. and Love, M. I. and MacDonald, J. and Obenchain, V. and Ole's, A. K. and Pag`es, H. and Reyes, A. and Shannon, P. and Smyth, G. K. and Tenenbaum, D. and Waldron, L. and Morgan, M.},
@@ -45,6 +144,16 @@
   volume = {12},
   number = {2},
   pages = {115--121}
+}
+
+@inproceedings{Kluyver2016jupyter,
+  title = {Jupyter {{Notebooks}} -- a Publishing Format for Reproducible Computational Workflows},
+  booktitle = {Positioning and Power in Academic Publishing: {{Players}}, Agents and Agendas},
+  author = {Kluyver, Thomas and {Ragan-Kelley}, Benjamin and P{\'e}rez, Fernando and Granger, Brian and Bussonnier, Matthias and Frederic, Jonathan and Kelley, Kyle and Hamrick, Jessica and Grout, Jason and Corlay, Sylvain and Ivanov, Paul and Avila, Dami{\'a}n and Abdalla, Safia and Willing, Carol},
+  editor = {Loizides, F. and Schmidt, B.},
+  year = {2016},
+  pages = {87--90},
+  publisher = {IOS Press}
 }
 
 @article{maloneModelingSampleVariables2010,
@@ -65,6 +174,79 @@
   file = {/Users/robert/Zotero/storage/QDHSA8KS/Malone et al. - 2010 - Modeling sample variables with an Experimental Fac.pdf}
 }
 
+@misc{ManualTitleGwasCatSearch,
+  title = {@{{Manual}}\{,     Title = \{\vphantom{\}\}}{{gwasCatSearch}}: {{A}} Package to Support Ontological Search of the {{GWAS Catalog}}\vphantom\{\},     Author = \{\vphantom\}{{Robert Gentleman}} and {{Vincent Carey}} and {{Rafael Goncalves}}\vphantom\{\},     Year = \{2024\},     Note = \{\vphantom\}{{R}} Package Version 0.2.2\vphantom\{\},   \vphantom\{\}}
+}
+
+@techreport{NHANES,
+  year = {1999/2023},
+  address = {Hyattsville, MD: U.S. Department of Health and Human Services},
+  institution = {{Centers for Disease Control and Prevention (CDC). National Center for Health Statistics (NCHS). National Health and Nutrition Examination Survey Data.}},
+  urldate = {Feb, 2023}
+}
+
+@manual{nhanesA,
+  type = {Manual},
+  title = {{{nhanesA}}: {{NHANES}} Data Retrieval},
+  author = {Endres, Christopher and Ale, Laha and Gentleman, Robert and Sarkar, Deepayan},
+  year = {2024}
+}
+
+@misc{NhanesIssues,
+  title = {Towards {{Machine-Assisted Biomedical Data Preparation}}: {{A Use Case}} on {{Disparity}} in {{Access}} to {{Health Care}} {\textbar} {{HADatAc}}.Org},
+  urldate = {2024-03-05},
+  howpublished = {https://www.hadatac.org/node/123}
+}
+
+@article{phenotagger,
+  title = {{{PhenoTagger}}: A Hybrid Method for Phenotype Concept Recognition Using Human Phenotype Ontology},
+  shorttitle = {{{PhenoTagger}}},
+  author = {Luo, Ling and Yan, Shankai and Lai, Po-Ting and Veltri, Daniel and Oler, Andrew and Xirasagar, Sandhya and Ghosh, Rajarshi and Similuk, Morgan and Robinson, Peter N. and Lu, Zhiyong},
+  year = {2021},
+  month = jul,
+  journal = {Bioinformatics (Oxford, England)},
+  volume = {37},
+  number = {13},
+  pages = {1884--1890},
+  issn = {1367-4811},
+  doi = {10.1093/bioinformatics/btab019},
+  abstract = {MOTIVATION: Automatic phenotype concept recognition from unstructured text remains a challenging task in biomedical text mining research. Previous works that address the task typically use dictionary-based matching methods, which can achieve high precision but suffer from lower recall. Recently, machine learning-based methods have been proposed to identify biomedical concepts, which can recognize more unseen concept synonyms by automatic feature learning. However, most methods require large corpora of manually annotated data for model training, which is difficult to obtain due to the high cost of human annotation. RESULTS: In this article, we propose PhenoTagger, a hybrid method that combines both dictionary and machine learning-based methods to recognize Human Phenotype Ontology (HPO) concepts in unstructured biomedical text. We first use all concepts and synonyms in HPO to construct a dictionary, which is then used to automatically build a distantly supervised training dataset for machine learning. Next, a cutting-edge deep learning model is trained to classify each candidate phrase (n-gram from input sentence) into a corresponding concept label. Finally, the dictionary and machine learning-based prediction results are combined for improved performance. Our method is validated with two HPO corpora, and the results show that PhenoTagger compares favorably to previous methods. In addition, to demonstrate the generalizability of our method, we retrained PhenoTagger using the disease ontology MEDIC for disease concept recognition to investigate the effect of training on different ontologies. Experimental results on the NCBI disease corpus show that PhenoTagger without requiring manually annotated training data achieves competitive performance as compared with state-of-the-art supervised methods. AVAILABILITYAND IMPLEMENTATION: The source code, API information and data for PhenoTagger are freely available at https://github.com/ncbi-nlp/PhenoTagger. SUPPLEMENTARY INFORMATION: Supplementary data are available at Bioinformatics online.},
+  langid = {english},
+  pmid = {33471061}
+}
+
+@manual{phonto2024,
+  type = {Manual},
+  title = {Phonto: {{Using NHANES}} via Epiconductor},
+  author = {Ale, Laha and Gentleman, Robert},
+  year = {2024}
+}
+
+@inproceedings{pinheiro2023,
+  title = {Towards Machine-Assisted Biomedical Data Preparation: {{A}} Use Case on Disparity in Access to Health Care},
+  booktitle = {{{SeWebMeDa-2023}}: 6th {{International Workshop}} on {{Semantic Web}} Solutions for Large-Scale Biomedical Data Analytics},
+  author = {Pinheiro, P. and Santos, Henrique and Qi, Miao and Bennett, Kristin P. and McGuinness, Deborah L.},
+  year = {2023},
+  publisher = {CEUR Workshop Proceedings (CEUR-WS.org)}
+}
+
+@inproceedings{pinheiro2023,
+  title = {Towards Machine-Assisted Biomedical Data Preparation: {{A}} Use Case on Disparity in Access to Health Care},
+  booktitle = {{{SeWebMeDa-2023}}: 6th {{International Workshop}} on {{Semantic Web}} Solutions for Large-Scale Biomedical Data Analytics},
+  author = {Pinheiro, P. and Santos, Henrique and Qi, Miao and Bennett, Kristin P. and McGuinness, Deborah L.},
+  year = {2023},
+  publisher = {CEUR Workshop Proceedings (CEUR-WS.org)}
+}
+
+@manual{positteamRStudioIntegratedDevelopment2023,
+  type = {Manual},
+  title = {{{RStudio}}: {{Integrated}} Development Environment for {{R}}},
+  author = {{Posit team}},
+  year = {2023},
+  address = {Boston, MA},
+  institution = {Posit Software, PBC}
+}
+
 @article{rahman2022,
   title = {Association among Urinary Polycyclic Aromatic Hydrocarbons and Depression: A Cross-Sectional Study from {{NHANES}} 2015-2016},
   shorttitle = {Association among Urinary Polycyclic Aromatic Hydrocarbons and Depression},
@@ -81,6 +263,49 @@
   langid = {english},
   pmid = {34569004},
   keywords = {Adult,Biomarkers,Chemical,Cross-Sectional Studies,Depression,Environmental exposure,Humans,NHANES,Nutrition Surveys,Polycyclic aromatic hydrocarbons,Polycyclic Aromatic Hydrocarbons}
+}
+
+@article{RepRes,
+  title = {Statistical {{Analyses}} and {{Reproducible Research}}},
+  author = {Gentleman, Robert and Lang, Duncan Temple},
+  year = {2007},
+  journal = {Journal of Computational and Graphical Statistics},
+  volume = {16},
+  number = {1},
+  eprint = {27594227},
+  eprinttype = {jstor},
+  pages = {1--23},
+  publisher = {[American Statistical Association, Taylor \& Francis, Ltd., Institute of Mathematical Statistics, Interface Foundation of America]},
+  issn = {1061-8600},
+  urldate = {2024-02-20},
+  abstract = {It is important, if not essential, to integrate the computations and code used in data analyses, methodological descriptions, simulations, and so on with the documents that describe and rely on them. This integration allows readers to both verify and adapt the claims in the documents. Authors can easily reproduce the results in the future, and they can present the document's contents in a different medium, for example, with interactive controls. This article describes a software framework for both authoring and distributing these integrated, dynamic documents that contain text, code, data, and any auxiliary content needed to recreate the computations. The documents are dynamic in that the contents---including figures, tables, and so on---can be recalculated each time a view of the document is generated. Our model treats a dynamic document as a master or "source" document from which one can generate different views in the form of traditional, derived documents for different audiences. We introduce the concept of a compendium as a container for one or more dynamic documents and the different elements needed when processing them, such as code and data. The compendium serves as a means for distributing, managing, and updating the collection. The step from disseminating analyses via a compendium to reproducible research is a small one. By reproducible research, we mean research papers with accompanying software tools that allow the reader to directly reproduce the results and employ the computational methods that are presented in the research paper. Some of the issues involved in paradigms for the production, distribution, and use of such reproducible research are discussed.}
+}
+
+@manual{Rlang,
+  type = {Manual},
+  title = {R: {{A}} Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  year = {2021},
+  address = {Vienna, Austria},
+  institution = {R Foundation for Statistical Computing}
+}
+
+@manual{Rmarkdown,
+  type = {Manual},
+  title = {Rmarkdown: {{Dynamic}} Documents for {{R}}},
+  author = {Allaire, {\relax JJ} and Xie, Yihui and Dervieux, Christophe and McPherson, Jonathan and Luraschi, Javier and Ushey, Kevin and Atkins, Aron and Wickham, Hadley and Cheng, Joe and Chang, Winston and Iannone, Richard},
+  year = {2023}
+}
+
+@article{Rocker,
+  title = {An Introduction to Rocker: {{Docker}} Containers for {{R}}},
+  author = {Boettiger, Carl and Eddelbuettel, Dirk},
+  year = {2017},
+  journal = {The R Journal},
+  volume = {9},
+  number = {2},
+  pages = {527--536},
+  doi = {10.32614/RJ-2017-065}
 }
 
 @article{sollisNHGRIEBIGWASCatalog2023,
@@ -127,6 +352,12 @@
   keywords = {Black or African American,Genetic Predisposition to Disease,genome-wide association study,Genome-Wide Association Study,Humans,Hypertension,Kidney Diseases,Polymorphism Single Nucleotide,pQTL,protein quantitative trait loci,proteome,Proteome,Quantitative Trait Loci}
 }
 
+@misc{surveyP,
+  title = {Survey: Analysis of Complex Survey Samples},
+  author = {Lumley, Thomas},
+  year = {2023}
+}
+
 @article{Uberon2012,
   title = {Uberon, an Integrative Multi-Species Anatomy Ontology},
   author = {Mungall, Christopher J. and Torniai, Carlo and Gkoutos, Georgios V. and Lewis, Suzanna E. and Haendel, Melissa A.},
@@ -143,6 +374,24 @@
   pmcid = {PMC3334586},
   pmid = {22293552},
   keywords = {Anatomy Comparative,Classification,Computational Biology,Databases Factual,Humans,Phenotype,Software,Species Specificity}
+}
+
+@article{UMLS2004,
+  title = {The {{Unified Medical Language System}} ({{UMLS}}): Integrating Biomedical Terminology},
+  shorttitle = {The {{Unified Medical Language System}} ({{UMLS}})},
+  author = {Bodenreider, Olivier},
+  year = {2004},
+  month = jan,
+  journal = {Nucleic Acids Research},
+  volume = {32},
+  number = {Database issue},
+  pages = {D267-D270},
+  issn = {0305-1048},
+  doi = {10.1093/nar/gkh061},
+  urldate = {2024-04-14},
+  abstract = {The Unified Medical Language System (http://umlsks.nlm.nih.gov) is a repository of biomedical vocabularies developed by the US National Library of Medicine. The UMLS integrates over 2 million names for some 900 000 concepts from more than 60 families of biomedical vocabularies, as well as 12 million relations among these concepts. Vocabularies integrated in the UMLS Metathesaurus include the NCBI taxonomy, Gene Ontology, the Medical Subject Headings (MeSH), OMIM and the Digital Anatomist Symbolic Knowledge Base. UMLS concepts are not only inter-related, but may also be linked to external resources such as GenBank. In addition to data, the UMLS includes tools for customizing the Metathesaurus (MetamorphoSys), for generating lexical variants of concept names (lvg) and for extracting UMLS concepts from text (MetaMap). The UMLS knowledge sources are updated quarterly. All vocabularies are available at no fee for research purposes within an institution, but UMLS users are required to sign a license agreement. The UMLS knowledge sources are distributed on CD-ROM and by FTP.},
+  pmcid = {PMC308795},
+  pmid = {14681409}
 }
 
 @misc{zotero-1,
